--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/VinChien/restaurant_list_CRUD#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "mongoose": "^5.9.7"
